# Tanks-Robot

./: .gitignore  CustomIndentEncoder.py  Dockerfile  ExampleGames.json  Games.json  README.md  boardConstructor.py  build_test_suite.bat  commands.py  config.ini  configUtils.py  jsonManager.py  main.py  pyproject.toml  pytest.ini  renderPipeline.py  requirements.txt  requirements_dev.txt  setup.cfg  setup_env.sh  temp.py  tox.ini  wait-for-postgres.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  coverage.yml  lint.yml  tests.yml
build scripts/: build_test_suite.bat  build_test_suite.sh
libraries/: CustomIndentEncoder.py  boardConstructor.py  commands.py  configUtils.py  dailyUpkeepManager.py  jsonManager.py  messageHandler.py  renderPipeline.py
src/tanks/: main.py
src/tanks/libraries/: CustomIndentEncoder.py  UIElements.py  boardConstructor.py  commands.py  configUtils.py  connectionPool.py  dailyUpkeepManager.py  jsonManager.py  messageHandler.py  renderPipeline.py
test/: conftest.py  test_integration.py  test_unit.py  unit_test_class_handler.py  unit_test_utils.py  utilstest.py
test/integration/: test_active_game.py  test_before_game.py  test_dm_active.py  test_dm_before.py  test_dm_lobby.py  test_game.py  test_general_interaction.py  test_lobby_game.py
test/integration/internal/cogs/: message.py
test/unit/: test_active_game.py  test_before_game.py  test_daily_upkeep.py  test_direct_functions.py  test_dm_active.py  test_dm_lobby.py  test_general_interaction.py  test_lobby_game.py
test/unit/internal/cogs/: message.py
textureSaves/: EmptySquare.pxz  TankWithBackground.pxz
