[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "cogs",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["B904"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"setup.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]