[metadata]
name = tanks
description = A tanks robot for discord
author = legojoshua12
license = GNU General Public License v3.0
license_file = LICENSE.md
platforms = unix, linux, win32, win64
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages =
    tanks
install_requires =
    discord>=2
    schedule>=1.1.0
    python-dotenv>=0.21.0
    cmapy>=0.6.6
    Pillow>=9.2.0
    numpy>=1.23.3
python_requires = ==3.8.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1.3
    pytest-cov>=2.0
    tox>=3.24

[options.package_data]
tanks = py.typed