[metadata]
name = tanks
description = A tanks robot for discord
author = legojoshua12
license = GNU General Public License v3.0
license_files = LICENSE.md
platforms = unix, linux, win32, win64
version= 0.9.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    tanks
install_requires =
    discord>=2.1.0
    schedule>=1.1.0
    python-dotenv>=0.21.0
    cmapy>=0.6.6
    Pillow>=9.4.0
    numpy>=1.24.1
python_requires = >=3.10.0
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.2.0
    dpytest>=0.6.0
    ruff>=0.1.4
    tox>=3.24

[options.package_data]
tanks = py.typed
